--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,6 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.8.2</version>
 		</dependency>
 
 		<dependency>
@@ -67,13 +66,29 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.5.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpcore</artifactId>
-			<version>4.4.7</version>
 		</dependency>
+		
+		<!-- git操作相关 -->
+		 <dependency>
+		      <groupId>org.eclipse.jgit</groupId>
+		      <artifactId>org.eclipse.jgit</artifactId>
+		      <version>4.11.0.201803080745-r</version>
+        </dependency>
+	    <dependency>
+		      <groupId>org.eclipse.jgit</groupId>
+		      <artifactId>org.eclipse.jgit.archive</artifactId>
+		      <version>4.11.0.201803080745-r</version>
+	    </dependency>
+	    
+	    <dependency>
+		    <groupId>com.jcraft</groupId>
+		    <artifactId>jsch</artifactId>
+		    <version>0.1.54</version>
+        </dependency>
 
 	</dependencies>
 
